# OAI_Modbus

./: .gitignore  .gitignore.txt  CHANGELOG.md  OaiModbus.py  README.md  poetry_guide.md  pyproject.toml  test.py
.github/workflows/: learn-github-actions.yml  main.yml
oai_modbus/: OAI_Modbus.py  __init__.py
tests/: test_oai_modbus.py
